--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "rBDAT"]
+	path = rBDAT
+	url = https://gitlab.com/vochr/rbdat
+	shallow = true
+	registered = true
